Adding disclaimer to index.html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div class="col-lg-6 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5">Calculate sleep regularity index from actigraphy files</h1>
+              <p>This tool is currently under construction. It assumes inputs of .csv files exported from Actiware and an epoch size of 30 seconds. </p>
+              
+              
             <div class="upload-wrapper">
                 <header>
                     <label class="btn btn-outline btn-xl">
