Improvements for mobile and color change to menu item

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       </div>
     </div>
   </nav>
+    
+<section >
     <div class="container h-100">
       <div class="row h-100">
         <div class="col-lg-6 my-auto">
@@ -72,7 +74,7 @@
         </div>
       </div>
     </div>
-
+    </section>
   <section class="about text-center" id="about">
     <div class="container">
       <div class="row">
