--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Sleep Regularity Index Calculator</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">SRI Calculator</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -46,7 +46,7 @@
     </div>
   </nav>
     
-<section >
+<section class="text-center">
     <div class="container h-100">
       <div class="row h-100">
         <div class="col-lg-6 my-auto">
